# market-conditions

./: .gitignore  README.md  app-py.py  app.py  app.yaml  pyproject.toml  requirements.txt
.cursor/rules/: market-conditions-app.mdc
.streamlit/: config.toml
assets/: fairfield_county_logo.txt
docs/: project-docs.md  specs.md
scripts/: generate_fairfield_geojson.py  generate_synthetic_data.py  preload_data.py  setup-script.sh  setup_project.sh  update_data.py
src/ai_analysis/: anthropic_client.py  llm_clients.py  openai_client.py  prompt_templates.py  report_formatter.py  report_generator.py
src/data_collection/: __init__.py  attom_api.py  bls_api.py  data_fetcher.py  fred_api.py
src/data_processing/: __init__.py  cleaners.py  metrics_calculator.py  time_series.py  transformers.py
src/ui/components/: __init__.py  filters.py  report_viewer.py  selectors.py
src/ui/pages/: __init__.py  analysis.py  comparison.py  economic.py  forecast.py  housing_metrics.py  overview.py  report_viewer.py  reports.py
src/utils/: caching.py  config.py  logger.py  security.py
src/visualization/: charts.py  dashboards.py  exporters.py  maps.py
tests/fixtures/: sample_api_responses.py  sample_processed_data.py
tests/integration/: test_api_clients.py  test_report_generation.py
tests/unit/: test_ai_analysis.py  test_data_processing.py  test_visualization.py
